--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>JustSnap</title>
 </head>
 
-<body>
+<body style="background-color: transparent !important; margin: 0; overflow: hidden;">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
